feat(auth) : 서버 네임 및 불필요 로그 삭제